# Cpp-Examples

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/util/: CMakeLists.txt  util.cc  util.h  util_file.cc  util_file.h  util_io.cc  util_io.h  util_math.cc  util_math.h  util_string.cc  util_string.h  util_time.cc  util_time.h
src/contact-manager/: CMakeLists.txt  contact_manager.cc  contact_manager.h  main.cc
src/exam-calculator/: CMakeLists.txt  main.cc  score_const.h
src/simple-calculator/: CMakeLists.txt  main.cc
src/to-do-list/: CMakeLists.txt  main.cc  simple_task.h  simple_task_test.cc  task.cc  task.h  task_errors.h  taskrepo.h
